--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "vue": "^2.5.2",
